# food

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  prd.md  spec.txt
.github/workflows/: capture-server-code.yml  ci.yml  debug-server.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agents/: auditor.py  base.py  executive_chef.py  orchestrator.py  scheduler.py  translator.py
backend/app/api/v1/: health.py  ingredients.py  plans.py  router.py  substitutions.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/models/: embedding.py  equipment.py  flavor_affinity.py  flavor_profile.py  ingredient.py  plan_history.py  technique.py
backend/app/prompts/: auditor.py  executive_chef.py  scheduler.py  translator.py
backend/app/schemas/: audit.py  common.py  ingredient.py  plan.py  substitution.py
backend/app/services/: flavor_graph.py  knowledge_base.py  scaling.py
backend/app/services/llm/: anthropic.py  base.py  factory.py  local.py
backend/seed/: equipment.json  flavor_affinities.json  flavor_profiles.json  ingest_knowledge.py  ingredients.json  runner.py  techniques.json
backend/tests/: conftest.py
backend/tests/unit/: test_auditor.py  test_llm_factory.py  test_local_ollama.py  test_scaling.py
deploy/: deploy.sh  nginx.conf
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useGeneratePlan.ts  (+2 more)
(+25 files in other folders)
